--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -319,14 +319,14 @@ The full list of mandatory (X) and optional (opt) external dependencies required
 | KF::CalendarCore     | optional | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/kcalendarcore       | For calendar tool to setup ical special events         |                                                                                       |
 | KF::KIO              | optional | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/kio                 | Optional: only for Linux Desktop                       |                                                                                       |
 | KF::AkonadiContact   | optional | >= 5.16.0  | >= 5.91.0  | https://invent.kde.org/pim/akonadi-contacts           | Plasma desktop addess-book support                     | (ENABLE_AKONADICONTACTSUPPORT=ON) Disabled by default.                                |
-| libopencv            |    X     | >= 3.3     |            | https://opencv.org/                                   | OpenCV 4 recommended                                   | DNN module required for face management                                               |
+| libopencv            |    X     | >= 3.3     |            | https://github.com/opencv/opencv                      | OpenCV 4 recommended                                   | DNN module required for face management                                               |
 | libtiff              |    X     | >= 4.0     |            | https://gitlab.com/libtiff/libtiff                    | For DImg image loader                                  |                                                                                       |
-| libpng               |    X     | >= 1.6     |            | https://libpng.sourceforge.io/index.html              | For DImg image loader                                  |                                                                                       |
+| libpng               |    X     | >= 1.6     |            | https://libpng.sourceforge.io/                        | For DImg image loader                                  |                                                                                       |
 | libjpeg              |    X     | >= 6b      |            | https://github.com/libjpeg-turbo/libjpeg-turbo        | jpeglib >= 8.0 hightly recommended for RawEngine       |                                                                                       |
 | libboost             |    X     | >= 1.55.0  |            | https://github.com/boostorg/boost                     | For Versioning support                                 |                                                                                       |
-| liblcms              |    X     | >= 2.x     |            | https://www.littlecms.com                             | For Color Management support                           |                                                                                       |
+| liblcms              |    X     | >= 2.x     |            | https://github.com/mm2/Little-CMS                     | For Color Management support                           |                                                                                       |
 | libexpat             |    X     | >= 2.1.0   |            | https://libexpat.github.io/                           | For DNG converter                                      |                                                                                       |
-| libexiv2             |    X     | >= 0.27.0  |            | https://www.exiv2.org                                 | Metadata low level management.                         |                                                                                       |
+| libexiv2             |    X     | >= 0.27.0  |            | https://github.com/Exiv2/exiv2                        | Metadata low level management.                         |                                                                                       |
 | libxml2              | optional | >= 2.7.0   |            | https://gitlab.gnome.org/GNOME/libxml2/               | For HtmlGallery tool                                   |                                                                                       |
 | libxslt              | optional | >= 1.1.0   |            | https://gitlab.gnome.org/GNOME/libxslt                | For HtmlGallery tool                                   |                                                                                       |
 | libqtav              | optional | >= 1.12.0  | git master | https://github.com/wang-bin/QtAV                      | To play video and audio (ENABLE_MEDIAPLAYER=on)        |                                                                                       |
@@ -337,7 +337,7 @@ The full list of mandatory (X) and optional (opt) external dependencies required
 | libksane             | optional | >= 5.55.0  | ---        | https://invent.kde.org/graphics/libksane              | Digital scanner support                                | Not yet ported to Qt6                                                                 |
 | libmarble            | optional | >= 0.28.0  | ---        | https://invent.kde.org/education/marble               | For geolocation support                                | Not yet ported to Qt6                                                                 |
 | libjpasper           | optional | >= 1.900.1 |            | https://github.com/jasper-software/jasper             | For JPEG-2000 support                                  |                                                                                       |
-| libeigen3            | optional | >= 3.2     |            | https://eigen.tuxfamily.org                           | For Refocus tool                                       | See if Clapack from OpenCV can be used instead                                        |
+| libeigen3            | optional | >= 3.2     |            | https://github.com/eigenteam/eigen-git-mirror         | For Refocus tool                                       | See if Clapack from OpenCV can be used instead                                        |
 | liblensfun           | optional | >= 0.2.8   |            | https://github.com/lensfun/lensfun                    | For LensCorrection tool                                |                                                                                       |
 | liblqr-1             | optional | >= 0.4.2   |            | https://github.com/carlobaldassi/liblqr               | For Liquid rescale tool                                |                                                                                       |
 | libgphoto2           | optional | >= 2.5     |            | https://github.com/gphoto/libgphoto2                  | Digital camera drivers support. Need libusb-1          |                                                                                       |
