fix create HiDPI grouped thumbnails BUGS: 450575 FIXED-IN: 7.6.0

--- a/NEWS
+++ b/NEWS
@@ -853,4 +853,5 @@ BUGFIXES:
 836 ==> 450589 - "Save as": Cancelling the filename dialog does not cancel "Save as".
 837 ==> 450572 - default movie editor ?
 838 ==> 450588 - "Save" does not work if image was removed outside of Showfoto.
-839 ==> 
+839 ==> 450575 - Hidpi grouped icons.
+840 ==> 
